// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`final-comments GET /review-comments with data should render review LPA final comments page with error if no option is selected 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#status">Select the outcome of your review</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l">Review LPA final comments</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Final comments</dt>
                    <dd class="govuk-summary-list__value">Awaiting final comments review</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                    <dd class="govuk-summary-list__value">Not provided</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/final-comment/3670/add-document"> Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Review decision</legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status" name="status" type="radio"
                                value="valid">
                                <label class="govuk-label govuk-radios__label" for="status">Accept final comments</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-2" name="status" type="radio"
                                value="valid_requires_redaction">
                                <label class="govuk-label govuk-radios__label" for="status-2">Redact and accept final comments</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-3" name="status" type="radio"
                                value="invalid">
                                <label class="govuk-label govuk-radios__label" for="status-3">Reject final comments</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`final-comments GET /review-comments with data should render review LPA final comments page with the provided comments details 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l">Review LPA final comments</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Final comments</dt>
                    <dd class="govuk-summary-list__value">Awaiting final comments review</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                    <dd class="govuk-summary-list__value">Not provided</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/final-comment/3670/add-document"> Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Review decision</legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status" name="status" type="radio"
                                value="valid">
                                <label class="govuk-label govuk-radios__label" for="status">Accept final comments</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-2" name="status" type="radio"
                                value="valid_requires_redaction">
                                <label class="govuk-label govuk-radios__label" for="status-2">Redact and accept final comments</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-3" name="status" type="radio"
                                value="invalid">
                                <label class="govuk-label govuk-radios__label" for="status-3">Reject final comments</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`final-comments GET /review-comments with data should render review appellant final comments page with the provided comments details 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l">Review appellant final comments</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Final comments</dt>
                    <dd class="govuk-summary-list__value">Awaiting final comments review</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                    <dd class="govuk-summary-list__value">Not provided</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/final-comment/3670/add-document"> Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Review decision</legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status" name="status" type="radio"
                                value="valid">
                                <label class="govuk-label govuk-radios__label" for="status">Accept final comments</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-2" name="status" type="radio"
                                value="valid_requires_redaction">
                                <label class="govuk-label govuk-radios__label" for="status-2">Redact and accept final comments</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-3" name="status" type="radio"
                                value="invalid">
                                <label class="govuk-label govuk-radios__label" for="status-3">Reject final comments</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;
